--- a/style.css
+++ b/style.css
@@ -7,13 +7,15 @@ body {
   background: rgb(243, 254, 237);
   background: linear-gradient(to bottom right, rgb(255, 255, 255), rgb(234, 249, 225));
   background-repeat: no-repeat;
+  background-attachment: fixed;
   min-height: 100%;
   height: 100%;
   font-family: 'Roboto Slab', serif;
 }
 
-main.container {
-  padding: 30px 0 0 50px;
+body > .container {
+  padding-top: 30px;
+  padding-bottom: 50px;
   min-height: 100%;
   height: 100%;
 }
@@ -22,6 +24,10 @@ main.container {
   border-bottom: 1px dashed #555555;
   margin-bottom: 20px;
   padding-bottom: 20px;
+}
+
+.top-menu h1 {
+  text-align: left;
 }
 
 .left-menu-list li {
@@ -42,8 +48,20 @@ main.container {
   border-left: 1px dashed #555555;
 }
 
+.input-search {
+  font-size: 0.9rem;
+  padding: 2px 4px;
+  width: 100%;
+  max-width: 300px;
+}
 
+.term-title {
+  font-weight: 700;
+}
 
+.margin-top-30 {
+  margin-top: 30px;
+}
 
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
