--- a/style.css
+++ b/style.css
@@ -24,6 +24,8 @@ body > .container {
   border-bottom: 1px dashed #555555;
   margin-bottom: 20px;
   padding-bottom: 20px;
+  background: #555;
+  color: #fff;
 }
 
 .top-menu h1 {
