--- a/style.css
+++ b/style.css
@@ -1,35 +1,41 @@
 html {
-  min-height: 100%;
-  height: 100%;
+
 }
 
 body {
-  background: rgb(243, 254, 237);
-  background: linear-gradient(to bottom right, rgb(255, 255, 255), rgb(234, 249, 225));
+  /*background: rgb(243, 254, 237);
+  background: linear-gradient(to bottom right, rgb(255, 255, 255), rgb(234, 249, 225));*/
+  background: url('./img/bg.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
-  min-height: 100%;
-  height: 100%;
   font-family: 'Roboto Slab', serif;
 }
 
 body > .container {
   padding-top: 30px;
   padding-bottom: 50px;
-  min-height: 100%;
-  height: 100%;
+  background: rgba(255, 255, 255, 0.9);
 }
 
-.top-menu {
+.top-title {
   border-bottom: 1px dashed #555555;
   margin-bottom: 20px;
   padding-bottom: 20px;
-  background: #555;
+  background: #19374f;
   color: #fff;
 }
 
-.top-menu h1 {
-  text-align: left;
+.top-title span.title {
+  font-size: 2rem;
+  line-height: 1.5rem;
+  margin-top: 20px;
+}
+.top-title small {
+  margin-top: 10px;
+}
+
+.top-title small a {
+  color: inherit;
 }
 
 .left-menu-list li {
@@ -63,6 +69,11 @@ body > .container {
 
 .margin-top-30 {
   margin-top: 30px;
+}
+
+.height-100p {
+  height: 100%;
+  min-height: 100%;
 }
 
 // Small devices (landscape phones, 576px and up)
